Education & experience pages content & styling

--- a/education.html
+++ b/education.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Jordi Vilaplana &ndash; .Net Developer</title>
+    <title>Education &ndash; Jordi Vilaplana</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
     />
     <link rel="stylesheet" href="./css/site.css" />
+    <link rel="stylesheet" href="./css/chronogram.css" />
   </head>
   <body>
     <header class="page-header">
@@ -52,6 +53,297 @@
           </div>
 
           <div class="front-img-box"></div>
+        </div>
+      </section>
+
+      <section class="section section-academia">
+        <div class="container">
+          <h2>Formal academia</h2>
+          <ul class="record-list">
+            <li class="record-container">
+              <span class="record-year">2016</span>
+              <h3 class="record-title">Undergraduate Course in Videogames Design</h3>
+              <span class="record-where">Universidad San Jorge &ndash; Grupo San Valero</span>
+              <ul class="tag-list">
+                <li class="tag-list-head">Key skills:</li>
+                <li class="tag-item">Unity 3D</li>
+                <li class="tag-item">C#</li>
+                <li class="tag-item">GUI Design</li>
+                <li class="tag-item">Event-Driven Programming</li>
+                <li class="tag-item">Real-Time Data Processing</li>
+              </ul>
+            </li>
+
+            <li class="record-container">
+              <span class="record-year">2013</span>
+              <h3 class="record-title">Professional Certificate in Information Systems Development</h3>
+              <span class="record-where">SERVEF Formation Center &ndash; Ontinyent</span>
+              <ul class="tag-list">
+                <li class="tag-list-head">Key skills:</li>
+                <li class="tag-item">C#</li>
+                <li class="tag-item">WPF</li>
+                <li class="tag-item">.Net Framework</li>
+                <li class="tag-item">Desktop App Development</li>
+                <li class="tag-item">Web API Consumption</li>
+              </ul>
+            </li>
+
+            <li class="record-container">
+              <span class="record-year">2013</span>
+              <h3 class="record-title">Associate Degree in Web Applications Development</h3>
+              <span class="record-where">IES L'Estaci&oacute; &ndash; Ontinyent</span>
+              <ul class="tag-list">
+                <li class="tag-list-head">Key skills:</li>
+                <li class="tag-item">xAMP</li>
+                <li class="tag-item">PHP</li>
+                <li class="tag-item">HTML</li>
+                <li class="tag-item">CSS</li>
+                <li class="tag-item">JavaScript</li>
+                <li class="tag-item">Java</li>
+                <li class="tag-item">SQL</li>
+                <li class="tag-item">Object-Oriented Programming</li>
+              </ul>
+            </li>
+
+            <li class="record-container">
+              <span class="record-year">2006</span>
+              <h3 class="record-title">Baccalaureate in Sciences and Technology</h3>
+              <span class="record-where">IES Josep Segrelles &ndash; Albaida</span>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="section section-awards">
+        <div class="container big-card card-green">
+          <h2 class="h-white">Awards</h2>
+          <div class="grid g--4-cols">
+            <figure class="award-item">
+              <p class="award-year">2005</p>
+              <p class="award-result"><strong>9</strong>th</p>
+              <h3>
+                X Prova Cangur <br />
+                Nv.3
+              </h3>
+              <p class="award-text">
+                Mathematic olympiad in Catalan / Valencian speaking regions of Spain.
+                <br /><br />
+                Over 3000 contestants.
+                <br /><br />
+                Level 3 corresponds to 1st year of Baccalaureate studies.
+              </p>
+            </figure>
+
+            <figure class="award-item">
+              <p class="award-year">2006</p>
+              <p class="award-result"><strong>27</strong>th</p>
+              <p class="award-result">top <strong>1</strong>&percnt;</p>
+              <h3>
+                XI Prova Cangur<br />
+                Nv.4
+              </h3>
+              <p class="award-text">
+                Mathematic olympiad in Catalan / Valencian speaking regions of Spain.
+                <br /><br />
+                Over 2000 contestants.
+                <br /><br />
+                Level 4 corresponds to 2nd year of Baccalaureate studies.
+              </p>
+            </figure>
+
+            <figure class="award-item">
+              <p class="award-year">2012</p>
+              <p class="award-result"><strong>5</strong>th</p>
+              <h3>I Programa-Me Spain</h3>
+              <p class="award-text">
+                National coding challenges contest for student teams (3 participants per team).
+                <br /><br />
+                <strong>Ranked 1st</strong> in regional qualifiers.
+              </p>
+            </figure>
+
+            <figure class="award-item">
+              <p class="award-year">2013</p>
+              <p class="award-result"><strong>5</strong>th</p>
+              <h3>II Programa-Me Spain</h3>
+              <p class="award-text">
+                National coding challenges contest for student teams (3 participants per team).
+                <br /><br />
+                <strong>Ranked 10th</strong> in open online qualifiers.
+              </p>
+            </figure>
+          </div>
+        </div>
+      </section>
+
+      <section class="section section-languages">
+        <div class="container">
+          <h2>Languages</h2>
+          <div class="grid g--3-cols narrow">
+            <figure class="figure-item">
+              <span class="figure-icon-container">
+                <ion-icon class="figure-icon" name="bulb-outline"></ion-icon>
+              </span>
+              <h3>Spanish</h3>
+              <p class="figure-text"><strong>Native speaker</strong></p>
+            </figure>
+
+            <figure class="figure-item">
+              <span class="figure-icon-container">
+                <ion-icon class="figure-icon" name="code-slash-outline"></ion-icon>
+              </span>
+              <h3>Catalan / Valencian</h3>
+              <p class="figure-text"><strong>Native speaker</strong></p>
+            </figure>
+
+            <figure class="figure-item">
+              <span class="figure-icon-container">
+                <ion-icon class="figure-icon" name="people-outline"></ion-icon>
+              </span>
+              <h3>English</h3>
+              <p class="figure-text">CEFR <strong>B2</strong></p>
+              <p class="figure-text">Cambridge's <strong>First Certificate in English</strong></p>
+            </figure>
+          </div>
+        </div>
+      </section>
+
+      <section class="section section-other">
+        <div class="container">
+          <h2>Other courses and certificates</h2>
+          <ul class="record-list">
+            <li class="record-container">
+              <h3 class="record-title">Build Responsive Real-World Websites with HTML and CSS</h3>
+              <span class="record-where">Udemy &ndash; by Jonas Schmedtmann</span>
+              <ul class="tag-list">
+                <li class="tag-list-head">Key skills:</li>
+                <li class="tag-item">HTML</li>
+                <li class="tag-item">CSS</li>
+                <li class="tag-item">Web Design</li>
+                <li class="tag-item">Web Accessibility</li>
+              </ul>
+              <p class="certificate-container">
+                <a href="https://www.udemy.com/certificate/UC-ffbc7dcc-4270-4cae-beca-23e4c03b8fb6/" class="certificate-link">
+                  See certificate
+                  <ion-icon class="certificate-icon" name="chevron-forward-outline"></ion-icon>
+                </a>
+              </p>
+            </li>
+
+            <li class="record-container">
+              <h3 class="record-title">Build web apps with ASP.NET Core for beginners</h3>
+              <span class="record-where">Microsoft Learn</span>
+              <ul class="tag-list">
+                <li class="tag-list-head">Key skills:</li>
+                <li class="tag-item">C#</li>
+                <li class="tag-item">.Net Core</li>
+                <li class="tag-item">ASP.Net</li>
+              </ul>
+              <p class="certificate-container">
+                <a
+                  href="https://learn.microsoft.com/api/achievements/share/en-us/jordivilaplana-es/AE3PJFN7?sharingId=F90EA6661559F09C"
+                  class="certificate-link"
+                >
+                  See certificate
+                  <ion-icon class="certificate-icon" name="chevron-forward-outline"></ion-icon>
+                </a>
+              </p>
+            </li>
+
+            <li class="record-container">
+              <h3 class="record-title">Create web apps and services with ASP.NET Core, minimal API, and .NET</h3>
+              <span class="record-where">Microsoft Learn</span>
+              <ul class="tag-list">
+                <li class="tag-list-head">Key skills:</li>
+                <li class="tag-item">C#</li>
+                <li class="tag-item">.Net Core</li>
+                <li class="tag-item">ASP.Net</li>
+                <li class="tag-item">Entity Framework</li>
+                <li class="tag-item">Web API</li>
+                <li class="tag-item">Swagger</li>
+              </ul>
+              <p class="certificate-container">
+                <a
+                  href="https://learn.microsoft.com/api/achievements/share/en-us/jordivilaplana-es/PSFEWQ84?sharingId=F90EA6661559F09C"
+                  class="certificate-link"
+                >
+                  See certificate
+                  <ion-icon class="certificate-icon" name="chevron-forward-outline"></ion-icon>
+                </a>
+              </p>
+            </li>
+
+            <li class="record-container">
+              <h3 class="record-title">Develop an ASP.NET Core web app that consumes an API</h3>
+              <span class="record-where">Microsoft Learn</span>
+              <ul class="tag-list">
+                <li class="tag-list-head">Key skills:</li>
+                <li class="tag-item">C#</li>
+                <li class="tag-item">.Net Core</li>
+                <li class="tag-item">ASP.Net</li>
+                <li class="tag-item">Entity Framework</li>
+                <li class="tag-item">Web API</li>
+                <li class="tag-item">REST API</li>
+                <li class="tag-item">Swagger</li>
+              </ul>
+              <p class="certificate-container">
+                <a
+                  href="https://learn.microsoft.com/api/achievements/share/en-us/jordivilaplana-es/XVCME85Y?sharingId=F90EA6661559F09C"
+                  class="certificate-link"
+                >
+                  See certificate
+                  <ion-icon class="certificate-icon" name="chevron-forward-outline"></ion-icon>
+                </a>
+              </p>
+            </li>
+
+            <li class="record-container">
+              <h3 class="record-title">Build web apps with Blazor</h3>
+              <span class="record-where">Microsoft Learn</span>
+              <ul class="tag-list">
+                <li class="tag-list-head">Key skills:</li>
+                <li class="tag-item">C#</li>
+                <li class="tag-item">.Net Core</li>
+                <li class="tag-item">Blazor</li>
+                <li class="tag-item">Web API</li>
+                <li class="tag-item">REST API</li>
+                <li class="tag-item">Swagger</li>
+              </ul>
+              <p class="certificate-container">
+                <a
+                  href="https://learn.microsoft.com/api/achievements/share/en-us/jordivilaplana-es/45RAS46K?sharingId=F90EA6661559F09C"
+                  class="certificate-link"
+                >
+                  See certificate
+                  <ion-icon class="certificate-icon" name="chevron-forward-outline"></ion-icon>
+                </a>
+              </p>
+            </li>
+
+            <li class="record-container">
+              <h3 class="record-title">Build mobile and desktop apps with .NET MAUI</h3>
+              <span class="record-where">Microsoft Learn</span>
+              <ul class="tag-list">
+                <li class="tag-list-head">Key skills:</li>
+                <li class="tag-item">C#</li>
+                <li class="tag-item">.Net Core</li>
+                <li class="tag-item">MAUI</li>
+                <li class="tag-item">XAML</li>
+                <li class="tag-item">REST Request</li>
+                <li class="tag-item">SQLite</li>
+                <li class="tag-item">Entity Framework</li>
+              </ul>
+              <p class="certificate-container">
+                <a
+                  href="https://learn.microsoft.com/api/achievements/share/en-us/jordivilaplana-es/3YTYCK8H?sharingId=F90EA6661559F09C"
+                  class="certificate-link"
+                >
+                  See certificate
+                  <ion-icon class="certificate-icon" name="chevron-forward-outline"></ion-icon>
+                </a>
+              </p>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
