--- a/experience.html
+++ b/experience.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
     />
     <link rel="stylesheet" href="./css/site.css" />
+    <link rel="stylesheet" href="./css/chronogram.css" />
   </head>
   <body>
     <header class="page-header">
@@ -52,6 +53,201 @@
           </div>
 
           <div class="front-img-box"></div>
+        </div>
+      </section>
+      <section class="section section-other">
+        <div class="container">
+          <h2>Working experience</h2>
+
+          <ul class="record-list">
+            <li class="record-container">
+              <span class="record-year">2021 &ndash; 2022</span>
+              <h3 class="record-title">Android Point-of-Sell Devices Developer</h3>
+              <p class="record-where">2i Inform&aacute;tica Industrial</p>
+              <p class="duties-title">Duties &amp; Responsibilities:</p>
+              <ul class="duties-list">
+                <li class="duties-item">PoS &amp; Remote Payment Devices Developer</li>
+                <li class="duties-item">Redsys PUP Java Developer</li>
+                <li class="duties-item">Android Java Developer</li>
+              </ul>
+              <ul class="tag-list">
+                <li class="tag-list-head">Key skills:</li>
+                <li class="tag-item">Android</li>
+                <li class="tag-item">Java</li>
+                <li class="tag-item">Protocol Abstraction</li>
+                <li class="tag-item">Serial Data Communications</li>
+              </ul>
+            </li>
+
+            <li class="record-container">
+              <span class="record-year">2020 &ndash; 2021</span>
+              <h3 class="record-title">Xamarin Developer</h3>
+              <p class="record-where">ERNI Consulting</p>
+              <p class="duties-title">Duties &amp; Responsibilities:</p>
+              <ul class="duties-list">
+                <li class="duties-item">Healthcare App for Devices Developer</li>
+              </ul>
+              <ul class="tag-list">
+                <li class="tag-list-head">Key skills:</li>
+                <li class="tag-item">Xamarin.Forms</li>
+                <li class="tag-item">C#</li>
+                <li class="tag-item">.Net Core</li>
+                <li class="tag-item">Android</li>
+                <li class="tag-item">iOS</li>
+              </ul>
+            </li>
+
+            <li class="record-container">
+              <span class="record-year">2019 &ndash; 2020</span>
+              <h3 class="record-title">Android &amp; iOS Developer</h3>
+              <p class="record-where">Contasimple</p>
+              <p class="duties-title">Duties &amp; Responsibilities:</p>
+              <ul class="duties-list">
+                <li class="duties-item">Invoicing App Developer</li>
+              </ul>
+              <ul class="tag-list">
+                <li class="tag-list-head">Key skills:</li>
+                <li class="tag-item">Android</li>
+                <li class="tag-item">iOS</li>
+                <li class="tag-item">Java</li>
+                <li class="tag-item">Objective-C</li>
+              </ul>
+            </li>
+
+            <li class="record-container">
+              <span class="record-year">2017 &ndash; 2019</span>
+              <h3 class="record-title">Xamarin Lead Developer</h3>
+              <p class="record-where">everis Spain (now NTT Data)</p>
+              <p class="duties-title">Duties &amp; Responsibilities:</p>
+              <ul class="duties-list">
+                <li class="duties-item">Project Technical Manager</li>
+                <li class="duties-item">Project Architect &amp; Analyst</li>
+                <li class="duties-item">Technology Coach</li>
+                <li class="duties-item">Solutions Developer</li>
+                <li class="duties-item">3rd Party Software Integration</li>
+              </ul>
+              <ul class="tag-list">
+                <li class="tag-list-head">Key skills:</li>
+                <li class="tag-item">Xamarin</li>
+                <li class="tag-item">C#</li>
+                <li class="tag-item">.Net Core</li>
+                <li class="tag-item">Android</li>
+                <li class="tag-item">iOS</li>
+                <li class="tag-item">Team Management</li>
+              </ul>
+            </li>
+
+            <li class="record-container">
+              <span class="record-year">2015 &ndash; 2016</span>
+              <h3 class="record-title">Android Developer</h3>
+              <p class="record-where">visualNACert</p>
+              <p class="duties-title">Duties &amp; Responsibilities:</p>
+              <ul class="duties-list">
+                <li class="duties-item">Agro-tech App Developer</li>
+              </ul>
+              <ul class="tag-list">
+                <li class="tag-list-head">Key skills:</li>
+                <li class="tag-item">Android</li>
+                <li class="tag-item">Java</li>
+                <li class="tag-item">Maps &amp; GPS Data Processing</li>
+                <li class="tag-item">SQLite</li>
+                <li class="tag-item">Data Persistence &amp; Sync</li>
+              </ul>
+            </li>
+
+            <li class="record-container">
+              <span class="record-year">2015</span>
+              <h3 class="record-title">Xamarin.iOS Developer</h3>
+              <p class="record-where">Global Omnium</p>
+              <p class="record-where">on behalf of Dim&aacute;tica Software Development</p>
+              <p class="duties-title">Duties &amp; Responsibilities:</p>
+              <ul class="duties-list">
+                <li class="duties-item">Public Services App Developer</li>
+              </ul>
+              <ul class="tag-list">
+                <li class="tag-list-head">Key skills:</li>
+                <li class="tag-item">Xamarin</li>
+                <li class="tag-item">C#</li>
+                <li class="tag-item">Mono Framework</li>
+                <li class="tag-item">XAML SOAP</li>
+              </ul>
+            </li>
+
+            <li class="record-container">
+              <span class="record-year">2014 &ndash; 2015</span>
+              <h3 class="record-title">Xamarin Developer</h3>
+              <p class="record-where">Inase Inform&aacute;tica</p>
+              <p class="duties-title">Duties &amp; Responsibilities:</p>
+              <ul class="duties-list">
+                <li class="duties-item">B2B Wholesales App Development</li>
+                <li class="duties-item">Email Newsletter Templates</li>
+              </ul>
+              <ul class="tag-list">
+                <li class="tag-list-head">Key skills:</li>
+                <li class="tag-item">Xamarin</li>
+                <li class="tag-item">C#</li>
+                <li class="tag-item">Mono Framework</li>
+                <li class="tag-item">MVVM-Cross</li>
+                <li class="tag-item">SQLite</li>
+                <li class="tag-item">Android</li>
+                <li class="tag-item">iOS</li>
+                <li class="tag-item">Windows UWP</li>
+                <li class="tag-item">HTML</li>
+                <li class="tag-item">CSS</li>
+              </ul>
+            </li>
+
+            <li class="record-container">
+              <span class="record-year">2013</span>
+              <h3 class="record-title">
+                Software Developer <br />
+                (internship)
+              </h3>
+              <p class="record-where">Hiquesma Disseny</p>
+              <p class="duties-title">Duties &amp; Responsibilities:</p>
+              <ul class="duties-list">
+                <li class="duties-item">Project Lead</li>
+                <li class="duties-item">xAMP Server Development</li>
+                <li class="duties-item">REST API Design &amp; Development</li>
+                <li class="duties-item">Web Development</li>
+              </ul>
+              <ul class="tag-list">
+                <li class="tag-list-head">Key skills:</li>
+                <li class="tag-item">xAMP</li>
+                <li class="tag-item">REST API</li>
+                <li class="tag-item">PHP</li>
+                <li class="tag-item">MySQL</li>
+                <li class="tag-item">HTML</li>
+                <li class="tag-item">CSS</li>
+                <li class="tag-item">JavaScript</li>
+                <li class="tag-item">jQuery</li>
+              </ul>
+            </li>
+
+            <li class="record-container">
+              <span class="record-year">2013</span>
+              <h3 class="record-title">
+                Web Developer <br />
+                (internship)
+              </h3>
+              <p class="record-where">Inase Inform&aacute;tica</p>
+              <p class="duties-title">Duties &amp; Responsibilities:</p>
+              <ul class="duties-list">
+                <li class="duties-item">xAMP Server Development</li>
+                <li class="duties-item">Web Development</li>
+              </ul>
+              <ul class="tag-list">
+                <li class="tag-list-head">Key skills:</li>
+                <li class="tag-item">xAMP</li>
+                <li class="tag-item">PHP</li>
+                <li class="tag-item">MySQL</li>
+                <li class="tag-item">HTML</li>
+                <li class="tag-item">CSS</li>
+                <li class="tag-item">JavaScript</li>
+                <li class="tag-item">jQuery</li>
+              </ul>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
