--- a/experience.html
+++ b/experience.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Jordi Vilaplana &ndash; .Net Developer</title>
+    <title>Experience &ndash; Jordi Vilaplana</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -30,7 +30,7 @@
             <a href="#">Projects</a>
           </li>
           <li class="nav-item">
-            <a href="#">Lifestyle</a>
+            <a href="./lifestyle.html">Lifestyle</a>
           </li>
           <li class="nav-item">
             <a href="./contact.html">Contact</a>
