--- a/education.html
+++ b/education.html
@@ -30,7 +30,7 @@
             <a href="#">Projects</a>
           </li>
           <li class="nav-item">
-            <a href="#">Lifestyle</a>
+            <a href="./lifestyle.html">Lifestyle</a>
           </li>
           <li class="nav-item">
             <a href="./contact.html">Contact</a>
