--- a/lifestyle.html
+++ b/lifestyle.html
@@ -62,8 +62,13 @@
           </span>
           <h2>Photography</h2>
           <p class="figure-text">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore iusto, necessitatibus a, nulla deleniti quo dicta velit hic omnis exercitationem,
-            nemo voluptates porro! Eligendi voluptatum velit ipsum, nihil laboriosam tempora!
+            Photography is my creative outlet and a passion that enriches my life. Capturing the world through my lens allows me to see beauty in the everyday
+            and appreciate the subtle details of life. Whether it's the vibrant hues of a sunset, the candid expressions of people, or the intricate textures of
+            nature, photography helps me freeze moments in time and tell compelling visual stories.
+          </p>
+          <p class="figure-text">
+            This hobby fuels my creativity, sharpens my observational skills, and provides a perfect balance to my technical work in software development. It's
+            a constant reminder to look at the world with a fresh perspective and to find inspiration in the ordinary.
           </p>
         </section>
 
@@ -77,8 +82,14 @@
           </span>
           <h2>Hiking</h2>
           <p class="figure-text">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore iusto, necessitatibus a, nulla deleniti quo dicta velit hic omnis exercitationem,
-            nemo voluptates porro! Eligendi voluptatum velit ipsum, nihil laboriosam tempora!
+            Growing up in a small mountain town, hiking has always been a natural part of my life. The serene beauty of the mountains fuels my love for the
+            great outdoors. Hiking allows me to disconnect from the hustle and bustle and reconnect with nature. Inspired by the Japanese practice of
+            "shinrin-yoku" or forest bathing, I find immense peace and rejuvenation walking through the woods, absorbing the sights, sounds, and scents of the
+            forest.
+          </p>
+          <p class="figure-text">
+            This mindful immersion in nature not only boosts my physical well-being but also enhances my mental clarity and creativity. Hiking is my way of
+            embracing the tranquility of nature, finding balance, and drawing inspiration for both my personal and professional life.
           </p>
         </section>
 
@@ -88,25 +99,17 @@
           </span>
           <h2>Cooking</h2>
           <p class="figure-text">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore iusto, necessitatibus a, nulla deleniti quo dicta velit hic omnis exercitationem,
-            nemo voluptates porro! Eligendi voluptatum velit ipsum, nihil laboriosam tempora!
+            Cooking is a delightful and creative outlet for me, a way to explore and celebrate my Mediterranean roots while embracing global flavors. With a
+            special fondness for Italian cuisine, I enjoy crafting traditional dishes with a modern twist. My culinary adventures often take me beyond the
+            Mediterranean, blending vibrant Japanese and Mexican flavors into my recipes.
+          </p>
+          <p class="figure-text">
+            I have a particular passion for spicy food, experimenting with different spices to create dishes that tantalize the taste buds. Cooking is more than
+            just a hobby&ndash;it's a journey of discovery and fusion, bringing together diverse cultures and tastes into a delicious harmony.
           </p>
         </section>
 
         <section class="gallery gallery-cooking grid g--2-cols"></section>
-
-        <section class="gallery gallery-woodworking grid g--2-cols"></section>
-
-        <section class="section-woodworking figure-item">
-          <span class="figure-icon-container">
-            <ion-icon class="figure-icon" name="construct-outline"></ion-icon>
-          </span>
-          <h2>Woodworking</h2>
-          <p class="figure-text">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore iusto, necessitatibus a, nulla deleniti quo dicta velit hic omnis exercitationem,
-            nemo voluptates porro! Eligendi voluptatum velit ipsum, nihil laboriosam tempora!
-          </p>
-        </section>
       </div>
     </main>
 
