Added language flags

--- a/education.html
+++ b/education.html
@@ -179,7 +179,7 @@
           <div class="grid g--3-cols narrow">
             <figure class="figure-item">
               <span class="figure-icon-container">
-                <ion-icon class="figure-icon" name="bulb-outline"></ion-icon>
+                <img src="./img/flags/spain.webp" alt="Flag of Spain" class="figure-icon-flag" />
               </span>
               <h3>Spanish</h3>
               <p class="figure-text"><strong>Native speaker</strong></p>
@@ -187,7 +187,7 @@
 
             <figure class="figure-item">
               <span class="figure-icon-container">
-                <ion-icon class="figure-icon" name="code-slash-outline"></ion-icon>
+                <img src="./img/flags/catalonia.webp" alt="Flag of Catalonia" class="figure-icon-flag" />
               </span>
               <h3>Catalan / Valencian</h3>
               <p class="figure-text"><strong>Native speaker</strong></p>
@@ -195,7 +195,7 @@
 
             <figure class="figure-item">
               <span class="figure-icon-container">
-                <ion-icon class="figure-icon" name="people-outline"></ion-icon>
+                <img src="./img/flags/uk.webp" alt="Flag of the United Kingdom" class="figure-icon-flag" />
               </span>
               <h3>English</h3>
               <p class="figure-text">CEFR <strong>B2</strong></p>
