Remove unused colors & optimize link texts

--- a/index.html
+++ b/index.html
@@ -69,7 +69,10 @@
                 impactful, industry-leading solutions.
               </p>
               <span class="cta-container">
-                <a href="./experience.html" class="cta-link cta--med">See more&nbsp;<ion-icon class="cta-icon" name="chevron-forward-outline"></ion-icon></a>
+                <a href="./experience.html" class="cta-link cta--med">
+                  See working experience&nbsp;
+                  <ion-icon class="cta-icon" name="chevron-forward-outline"></ion-icon>
+                </a>
               </span>
             </div>
           </div>
@@ -128,7 +131,10 @@
                 leveraging the newest innovations to drive success.
               </p>
               <span class="cta-container">
-                <a href="./education.html" class="cta-link cta--med">See more&nbsp;<ion-icon class="cta-icon" name="chevron-forward-outline"></ion-icon></a>
+                <a href="./education.html" class="cta-link cta--med">
+                  See education&nbsp;
+                  <ion-icon class="cta-icon" name="chevron-forward-outline"></ion-icon>
+                </a>
               </span>
             </div>
             <div class="big-card-img"></div>
