Added images to Front section & Lifestyle page

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <main>
       <section class="section section-front">
-        <div class="container grid g--3-cols">
+        <div class="container grid g--3-cols g--no-gap">
           <div class="front-presentation">
             <h1 class="front-title">
               <span class="f-title-block t--green-dark">Jordi</span>
