--- a/lifestyle.html
+++ b/lifestyle.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
     />
     <link rel="stylesheet" href="./css/site.css" />
+    <link rel="stylesheet" href="./css/lifestyle.css" />
   </head>
   <body>
     <header class="page-header">
@@ -69,9 +70,23 @@
           </p>
         </section>
 
-        <section class="gallery gallery-photography grid g--2-cols"></section>
+        <section class="gallery gallery-photography grid g--2-cols">
+          <img class="galery-img" src="./img/lifestyle/photo-1.webp" alt="" />
+          <img class="galery-img" src="./img/lifestyle/photo-2.webp" alt="" />
+          <img class="galery-img" src="./img/lifestyle/photo-3.webp" alt="" />
+          <img class="galery-img" src="./img/lifestyle/photo-4.webp" alt="" />
+          <img class="galery-img" src="./img/lifestyle/photo-5.webp" alt="" />
+          <img class="galery-img" src="./img/lifestyle/photo-6.webp" alt="" />
+        </section>
 
-        <section class="gallery gallery-hiking grid g--2-cols"></section>
+        <section class="gallery gallery-hiking grid g--2-cols">
+          <img class="galery-img" src="./img/lifestyle/hiking-1.webp" alt="" />
+          <img class="galery-img" src="./img/lifestyle/hiking-2.webp" alt="" />
+          <img class="galery-img" src="./img/lifestyle/hiking-3.webp" alt="" />
+          <img class="galery-img" src="./img/lifestyle/hiking-4.webp" alt="" />
+          <img class="galery-img" src="./img/lifestyle/hiking-5.webp" alt="" />
+          <img class="galery-img" src="./img/lifestyle/hiking-6.webp" alt="" />
+        </section>
 
         <section class="section-hiking figure-item">
           <span class="figure-icon-container">
@@ -106,7 +121,14 @@
           </p>
         </section>
 
-        <section class="gallery gallery-cooking grid g--2-cols"></section>
+        <section class="gallery gallery-cooking grid g--2-cols">
+          <img class="galery-img" src="./img/lifestyle/cooking-1.webp" alt="" />
+          <img class="galery-img" src="./img/lifestyle/cooking-2.webp" alt="" />
+          <img class="galery-img" src="./img/lifestyle/cooking-3.webp" alt="" />
+          <img class="galery-img" src="./img/lifestyle/cooking-4.webp" alt="" />
+          <img class="galery-img" src="./img/lifestyle/cooking-5.webp" alt="" />
+          <img class="galery-img" src="./img/lifestyle/cooking-6.webp" alt="" />
+        </section>
       </div>
     </main>
 
