--- a/education.html
+++ b/education.html
@@ -12,6 +12,7 @@
     />
     <link rel="stylesheet" href="./css/site.css" />
     <link rel="stylesheet" href="./css/chronogram.css" />
+    <link rel="stylesheet" href="./css/media.css" />
   </head>
   <body>
     <header class="page-header">
@@ -116,18 +117,24 @@
           <h2 class="h-white">Awards</h2>
           <div class="grid g--4-cols">
             <figure class="award-item">
-              <p class="award-year">2005</p>
-              <p class="award-result"><strong>9</strong>th</p>
-              <h3>
-                X Prova Cangur <br />
-                Nv.3
-              </h3>
+              <p class="award-year">2013</p>
+              <p class="award-result"><strong>5</strong>th</p>
+              <h3>II Programa-Me Spain</h3>
               <p class="award-text">
-                Mathematic olympiad in Catalan / Valencian speaking regions of Spain.
+                National coding challenges contest for student teams (3 participants per team).
                 <br /><br />
-                Over 3000 contestants.
+                <strong>Ranked 10th</strong> in open online qualifiers.
+              </p>
+            </figure>
+
+            <figure class="award-item">
+              <p class="award-year">2012</p>
+              <p class="award-result"><strong>5</strong>th</p>
+              <h3>I Programa-Me Spain</h3>
+              <p class="award-text">
+                National coding challenges contest for student teams (3 participants per team).
                 <br /><br />
-                Level 3 corresponds to 1st year of Baccalaureate studies.
+                <strong>Ranked 1st</strong> in regional qualifiers.
               </p>
             </figure>
 
@@ -149,24 +156,18 @@
             </figure>
 
             <figure class="award-item">
-              <p class="award-year">2012</p>
-              <p class="award-result"><strong>5</strong>th</p>
-              <h3>I Programa-Me Spain</h3>
+              <p class="award-year">2005</p>
+              <p class="award-result"><strong>9</strong>th</p>
+              <h3>
+                X Prova Cangur <br />
+                Nv.3
+              </h3>
               <p class="award-text">
-                National coding challenges contest for student teams (3 participants per team).
+                Mathematic olympiad in Catalan / Valencian speaking regions of Spain.
                 <br /><br />
-                <strong>Ranked 1st</strong> in regional qualifiers.
-              </p>
-            </figure>
-
-            <figure class="award-item">
-              <p class="award-year">2013</p>
-              <p class="award-result"><strong>5</strong>th</p>
-              <h3>II Programa-Me Spain</h3>
-              <p class="award-text">
-                National coding challenges contest for student teams (3 participants per team).
+                Over 3000 contestants.
                 <br /><br />
-                <strong>Ranked 10th</strong> in open online qualifiers.
+                Level 3 corresponds to 1st year of Baccalaureate studies.
               </p>
             </figure>
           </div>
