Added home page images & images copyright

--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
         <div class="container big-card card-green">
           <h2 class="h-white">Experience across the field</h2>
           <div class="grid g--3-cols">
-            <div class="big-card-img"></div>
+            <div class="big-card-img">
+              <img src="./img/index-1.webp" alt="" />
+            </div>
             <div class="g--span-2-wide">
               <p class="big-card-txt">
                 I'm a versatile .NET software developer with experience in start-ups, top consultancy firms, and established industrial leaders. I've built
@@ -138,7 +140,9 @@
                 </a>
               </span>
             </div>
-            <div class="big-card-img"></div>
+            <div class="big-card-img">
+              <img src="./img/index-2.webp" alt="" />
+            </div>
           </div>
         </div>
       </section>
@@ -225,6 +229,14 @@
     <footer class="section page-footer">
       <p class="copyright">Copyright &copy; 2024 by Jordi Vilaplana Mart&iacute;.<br />All rights reserved.</p>
       <p class="copyright">Icons by <a href="https://ionic.io/ionicons" target="_blank">Ionicons</a>.</p>
+      <p class="copyright">
+        Home page additional images by
+        <a href="https://unsplash.com/@weareprocreator?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Procreator UX Design Studio</a> and
+        <a href="https://unsplash.com/@mitchel3uo?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Mitchell Luo</a>
+        at <a href="https://ionic.io/ionicons" target="_blank">Unsplash</a>.
+        <br />
+        All other images &copy; by Jordi Vilaplana Mart&iacute;.
+      </p>
     </footer>
 
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
