--- a/experience.html
+++ b/experience.html
@@ -254,6 +254,14 @@
     <footer class="section page-footer">
       <p class="copyright">Copyright &copy; 2024 by Jordi Vilaplana Mart&iacute;.<br />All rights reserved.</p>
       <p class="copyright">Icons by <a href="https://ionic.io/ionicons" target="_blank">Ionicons</a>.</p>
+      <p class="copyright">
+        Home page additional images by
+        <a href="https://unsplash.com/@weareprocreator?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Procreator UX Design Studio</a> and
+        <a href="https://unsplash.com/@mitchel3uo?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Mitchell Luo</a>
+        at <a href="https://ionic.io/ionicons" target="_blank">Unsplash</a>.
+        <br />
+        All other images &copy; by Jordi Vilaplana Mart&iacute;.
+      </p>
     </footer>
 
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
